# NSU-Labs

./: .gitmodules  README.md
C++-Labs/lab_0b_word_counter/: CMakeLists.txt
C++-Labs/lab_0b_word_counter/src/: WordCounter.cpp  WordCounter.h  main.cpp
C++-Labs/lab_1_circular_buffer/: CMakeLists.txt
C++-Labs/lab_1_circular_buffer/src/: CircularBuffer.cpp  CircularBuffer.h
C++-Labs/lab_1_circular_buffer/src/test/: CircularBufferTests.cpp
C++-Labs/lab_1_circular_buffer/test/: CircularBufferTests.cpp
C++-Labs/lab_2_game_of_life/: CMakeLists.txt  vcpkg.json
C++-Labs/lab_2_game_of_life/resources/universes/: 32P21.life  glider.life  glider_gun.life
C++-Labs/lab_2_game_of_life/src/: Application.cpp  Application.h  main.cpp
C++-Labs/lab_2_game_of_life/test/: CommandlineArgumentsTests.cpp  FieldTests.cpp  RulesTests.cpp  UniverseTests.cpp
C++-Labs/lab_3_soundprocessor/: CMakeLists.txt
C++-Labs/lab_3_soundprocessor/src/: ConfigurationFile.h  SoundProcessorApp.cpp  SoundProcessorApp.h  main.cpp
C++-Labs/lab_3_soundprocessor/test/: ConfigurationFileTests.cpp
C++-Labs/lab_4_csv_parser/: CMakeLists.txt
C++-Labs/lab_4_csv_parser/src/: CSVParser.h  CSVParserErrors.cpp  CSVParserErrors.h  PrintTuple.h  StringConversion.h
C++-Labs/lab_4_csv_parser/test/: CSVParserTests.cpp  PrintTupleTests.cpp
C-Homework/SubstitutionCipher/: CMakeLists.txt
C-Homework/SubstitutionCipher/src/: error_handling.c  error_handling.h  main.c  monogram_analysis.c  monogram_analysis.h  substitution_cipher.c  substitution_cipher.h  trigram_analysis.c  trigram_analysis.h
C-Labs/Huffman_archiver/: CMakeLists.txt  readme.md
C-Labs/Huffman_archiver/src/: BitStream.c  BitStream.h  Compress.c  Compress.h  Decompress.c  Decompress.h  HuffmanTree.c  HuffmanTree.h  Queue.c  Queue.h  main.c
DB/app/: CMakeLists.txt  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  permissioncontroller.cpp  permissioncontroller.h
DB/app/views/: baseview.cpp  baseview.h  brigadesview.cpp  brigadesview.h  customerview.cpp  customerview.h  departmentview.cpp  departmentview.h  employeeview.cpp  employeeview.h  machinesview.cpp  machinesview.h  materialsview.cpp  materialsview.h  objectview.cpp  objectview.h  queryview.cpp  queryview.h  siteview.cpp  siteview.h  workview.cpp  workview.h
EVM-Labs/lab_1_measuring_time/: CMakeLists.txt  insert_kernel_module.sh
EVM-Labs/lab_1_measuring_time/kernel_module_build/: Makefile
EVM-Labs/lab_1_measuring_time/src/: clock_gettime_measure.c  common.h  measurable_code.c  measurable_code.h  rdtsc_kernel_module.c  rdtsc_user_space.c
EVM-Labs/lab_5_opencv/: CMakeLists.txt  vcpkg.json
EVM-Labs/lab_5_opencv/src/: CameraDemo.cpp  CameraDemo.h  main.cpp
EVM-Labs/lab_6_libusb/: CMakeLists.txt
EVM-Labs/lab_6_libusb/src/: print_usb_devices.cpp
EVM-Labs/lab_7_intrinsics/: CMakeLists.txt
EVM-Labs/lab_7_intrinsics/src/: blas_impl.cpp  matrix_inversion.cpp  matrix_inversion.h  matrix_utils.h  naive_impl.cpp  simd_impl.cpp
EVM-Labs/lab_7_intrinsics/test/: inversion_test.cpp
EVM-Labs/lab_8_cache_size/: CMakeLists.txt  plot.p
EVM-Labs/lab_8_cache_size/src/: CacheSizeMeasure.cpp  CacheSizeMeasure.h  main.cpp
EVM-Labs/lab_9_cache_associativity/: CMakeLists.txt  plot.p
EVM-Labs/lab_9_cache_associativity/src/: CacheAssociativityMeasure.cpp  CacheAssociativityMeasure.h  main.cpp
EVM-Labs/lab_extra_mouse_in_userspace/: CMakeLists.txt  lsusb_mouse_verbose.txt  mouse_report_descriptor.txt
EVM-Labs/lab_extra_mouse_in_userspace/src/: mouse_in_userspace.cpp
Epsmim/: CMakeLists.txt
Epsmim/src/: Application.cpp  Application.h  Utils.h  WaveEquation.cpp  WaveEquation.h  main.cpp
Graphics/2-ICGFilter/: .clang-format  CMakeLists.txt  resources.qrc
Graphics/2-ICGFilter/src/: AboutDialog.h  ICGFilter.cpp  ICGFilter.h  ICGFilter.ui  ImageViewport.cpp  ImageViewport.h  main.cpp
Networks/2-tcp_file_transfer/: README  common.c  common.h  error.h  meson.build  protocol.c  protocol.h
Networks/2-tcp_file_transfer/client/: meson.build  send_file.c
Networks/2-tcp_file_transfer/server/: client_thread.c  client_thread.h  error.c  error.h  meson.build  receiver_server.c  timer.c  timer.h  util.h
Networks/5-socks_proxy/: README  c.h  dns.c  dns.h  main.c  meson.build  server.c  server.h  socket.h  socks5.c  socks5.h
OPP-Labs/lab_1_mpi_sle/: CMakeLists.txt
OPP-Labs/lab_1_mpi_sle/src/: SLESolverMPI.cpp  SLESolverMPI.h  common.hpp  main.cpp  naive_impl.cpp  utils.hpp
OPP-Labs/lab_2_openmp_sle/: CMakeLists.txt
OPP-Labs/lab_2_openmp_sle/src/: SLESolver.cpp  SLESolver.h  SLESolverEffective.cpp  SLESolverEffective.h  SLESolverNaive.cpp  SLESolverNaive.h  benchmark.cpp
OPP-Labs/lab_2_openmp_sle/test/: visualize.py
OPP-Labs/lab_3_mpi_matmul/MatrixMultiplier/: CMakeLists.txt
OPP-Labs/lab_3_mpi_matmul/MultiplicationTester/: CMakeLists.txt
OPP-Labs/lab_3_mpi_matmul/matrixMultiplier/: CMakeLists.txt
OPP-Labs/lab_3_mpi_matmul/multiplicationTester/: CMakeLists.txt
OS-Labs/10-sync/: meson.build  queue-condvar.c  queue-mutex.c  queue-semaphore.c  queue-spinlock.c  queue-threads.c  queue.c  queue.h
OS-Labs/10.2-mylock/: meson.build  mymutex.c  mymutex.h  myspinlock.c  myspinlock.h  tst-locks.c
OS-Labs/11-http-proxy/: c.h  cache.c  cache.h  client_context.c  client_context.h  connection.c  connection.h  dns.c  http.c  http.h  http_request.c  http_request.h  main.c  meson.build  proxy.c  proxy.h  server.c  server.h  utils.c  utils.h  worker_thread.c  worker_thread.h
OS-Labs/11-http-proxy/common/: buffer.h  c.h  dynarray.h  hashmap.c  hashmap.h  list.h  meson.build  murmurhash.c  murmurhash.h
OS-Labs/11-http-proxy/server/: client_cond.c  client_cond.h  client_context.c  client_context.h  coroutine.c  coroutine.h  dns.c  dns.h  log_setup.h  meson.build  server.c  server.h  socket.h  worker_thread.c  worker_thread.h
OS-Labs/9.1-libmythread/: libmythread.c  libmythread.h  meson.build  test.c  tst-cancel.c  tst-create-join.c  tst-many-threads.c
OS-Labs/9.2-libmycoro/: libmycoro.c  libmycoro.h  meson.build  tst-many-coros.c  tst-normal.c  tst-recursive.c
(+759 files in other folders)
